docs/envoy/v1.35.1/_sources/intro/arch_overview/security/external_dep_test_only.rst.txt
External dependencies: ``test_only``
====================================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `Aspect Bazel helpers <https://github.com/aspect-build/bazel-lib>`__, `2.16.0 <https://github.com/aspect-build/bazel-lib/releases/tag/v2.16.0>`__, 2025-05-06, , `Apache-2.0 <https://github.com/aspect-build/bazel-lib/blob/v2.16.0/LICENSE>`__
  `Bazel build tools <https://github.com/bazelbuild/buildtools>`__, `8.2.1 <https://github.com/bazelbuild/buildtools/releases/tag/v8.2.1>`__, 2025-06-10, , 
  `Benchmark <https://github.com/google/benchmark>`__, `1.9.4 <https://github.com/google/benchmark/releases/tag/v1.9.4>`__, 2025-05-19, , `Apache-2.0 <https://github.com/google/benchmark/blob/v1.9.4/LICENSE>`__
  `compiler-rt <https://compiler-rt.llvm.org>`__, `18.1.8 <https://github.com/llvm/llvm-project/releases/tag/llvmorg-18.1.8>`__, 2024-06-19, `cpe:2.3:a:llvm:compiler-rt:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Allvm%3Acompiler-rt%3A%2A&search_type=all>`__, `Apache-2.0 <https://github.com/llvm/llvm-project/blob/llvmorg-18.1.8/compiler-rt/LICENSE.TXT>`__
  `Emscripten SDK <https://github.com/emscripten-core/emsdk>`__, `4.0.6 <https://github.com/emscripten-core/emsdk/releases/tag/4.0.6>`__, 2025-03-26, , `Emscripten SDK <https://github.com/emscripten-core/emsdk/blob/4.0.6/LICENSE>`__
  `envoy_examples <https://github.com/envoyproxy/examples>`__, `0.1.1 <https://github.com/envoyproxy/examples/releases/tag/v0.1.1>`__, 2025-07-21, , `Apache-2.0 <https://github.com/envoyproxy/examples/blob/v0.1.1/LICENSE>`__
  `Fuzzing Rules for Bazel <https://github.com/bazelbuild/rules_fuzzing>`__, `0.6.0 <https://github.com/bazelbuild/rules_fuzzing/releases/tag/v0.6.0>`__, 2025-07-18, , `Apache-2.0 <https://github.com/bazelbuild/rules_fuzzing/blob/v0.6.0/LICENSE>`__
  `Google Test <https://github.com/google/googletest>`__, `1.17.0 <https://github.com/google/googletest/releases/tag/v1.17.0>`__, 2025-04-30, `cpe:2.3:a:google:google_test:* <https://nvd.nist.gov/vuln/search/results?form_type=Advanced&results_type=overview&query=cpe%3A2.3%3Aa%3Agoogle%3Agoogle_test%3A%2A&search_type=all>`__, `BSD-3-Clause <https://github.com/google/googletest/blob/1.17.0/LICENSE>`__
  `Kafka (server binary) <https://kafka.apache.org>`__, `3.8.0 <https://downloads.apache.org/kafka/3.8.0/kafka_2.13-3.8.0.tgz>`__, 2024-07-23, , 
  `libpfm <https://sourceforge.net/projects/perfmon2>`__, `4.11.0 <https://downloads.sourceforge.net/project/perfmon2/libpfm4/libpfm-4.11.0.tar.gz>`__, 2020-09-03, , 
  `libprotobuf-mutator <https://github.com/google/libprotobuf-mutator>`__, `1.5 <https://github.com/google/libprotobuf-mutator/releases/tag/v1.5>`__, 2025-04-08, , `Apache-2.0 <https://github.com/google/libprotobuf-mutator/blob/v1.5/LICENSE>`__
  `WebAssembly for Proxies (Rust SDK) <https://github.com/proxy-wasm/proxy-wasm-rust-sdk>`__, `0.2.2 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/releases/tag/v0.2.2>`__, 2024-07-21, , `Apache-2.0 <https://github.com/proxy-wasm/proxy-wasm-rust-sdk/blob/v0.2.2/LICENSE>`__


envoy.filters.http.aws_request_signing
--------------------------------------

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `aws-c-auth <https://github.com/awslabs/aws-c-auth>`__, `0.9.0 <https://github.com/awslabs/aws-c-auth/releases/tag/v0.9.0>`__, 2025-03-25, , `Apache-2.0 <https://github.com/awslabs/aws-c-auth/blob/v0.9.0/LICENSE>`__

